# beer4u

./: alembic.ini  database.db  pyproject.toml
beer4u/: bootstrap.py  config.ini  ioc_container.py
beer4u/beer/beer/application/command/: __init__.py  delete_command.py  delete_command_handler.py  register_command.py  register_command_handler.py  update_command.py  update_command_handler.py
beer4u/beer/beer/application/query/: __init__.py  find_by_id_query.py  find_by_id_query_handler.py  search_all_query.py  search_all_query_handler.py  search_by_criteria_query.py  search_by_criteria_query_handler.py  search_by_id_query.py  search_by_id_query_handler.py
beer4u/beer/beer/domain/: __init__.py  beer.py  beer_repository.py
beer4u/beer/infrastructure/cqrs/: register_command.py  register_query.py
beer4u/beer/store/application/command/: __init__.py  delete_command.py  delete_command_handler.py  register_command.py  register_command_handler.py  update_command.py  update_command_handler.py
beer4u/beer/store/application/query/: __init__.py  find_by_id_query.py  find_by_id_query_handler.py  search_all_query.py  search_all_query_handler.py  search_by_criteria_query.py  search_by_criteria_query_handler.py  search_by_id_query.py  search_by_id_query_handler.py
beer4u/beer/store/domain/: __init__.py  store.py  store_repository.py
beer4u/shared/domain/: address.py  aggregate_root.py  entity.py  entity_id.py  money.py  repository_response.py
beer4u/shared/domain/criteria/: criteria.py  field.py  filter.py  filter_field.py  filter_operator.py  filter_value.py  filters.py  order.py  order_by.py  order_direction.py  order_field.py  order_type.py  orders.py
beer4u/shared/infrastructure/bus/: message_bus.py
beer4u/shared/infrastructure/criteria/: criteria_to_sqlalchemy_query.py
etc/request/: beer.http  store.http
migrations/: env.py
migrations/versions/: 295bee03f6ef_initial.py
src/: config.ini
src/apps/beer/api/v1/: main.py  (+2 more)
src/contexts/shared/domain/: __init__.py  address.py  aggregate_root.py  entity.py  entity_id.py  exception.py
tests/: conftest.py
tests/utils/factories/: address.py  address_factory.py  beer.py  beer_factory.py  entity_id_factory.py  store.py  store_factory.py
(+119 files in other folders)
